added show function

--- a/firstapp/DevcampPortfolio/app/views/portfolios/edit.html.erb
+++ b/firstapp/DevcampPortfolio/app/views/portfolios/edit.html.erb
@@ -19,4 +19,7 @@
   <div class="actions">
     <%= f.submit %>
   </div>
+  
+<h2>Destroy?</h2>
+<%= link_to 'Destroy', @portfolio_item, method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
