--- a/DevcampPortfolio/app/views/portfolios/show.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/show.html.erb
@@ -2,3 +2,9 @@
 <%= @portfolio_item.title %>
 <em><%= @portfolio_item.subtitle %></em>
 <p><%= @portfolio_item.body%></p>
+
+<h2>Technologies Used</h2>
+
+<% @portfolio_item.technologies.each do |t| %>
+<p><%= t.name %></p>
+<% end %>
