--- a/DevcampPortfolio/app/views/pages/home.html.erb
+++ b/DevcampPortfolio/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
-<h1> This is home <h1>
+<% if current_user %>
+  <h1>Hi, <%= current_user.first_name if current_user %><h1>
+<% else %>
+  <h1>hey loser with no account</h1>
+<% end %>
 <%= link_to 'Portfolios', portfolios_path %>
 <%= link_to 'Blogs', blogs_path %>
