added session tracker for dynamic source links

--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -18,6 +18,16 @@
       <%= link_to "Login", new_user_session_path %> 
       <%= link_to "Register", new_user_registration_path %>
     <% end %>
+    
     <%= yield %>
+    
+ 
+    <% if session[:source] %> 
+      Thanks for visiting me from <%= session[:source] %>
+    <% else %>
+      IDK HOW YOU GOT HERE YOU WIZZAARD
+    <% end %>
+    
   </body>
 </html>
+
