--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     
-    <%= render "shared/nav" %>
+    <%= render "shared/nav", location: 'top' %>
     
     <% if current_user.class == OpenStruct %>
       <%= link_to "Login", new_user_session_path %> 
