--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -15,13 +15,8 @@
     
     <%= render "shared/nav", location: 'top' %>
     
-    <% if current_user.class == OpenStruct %>
-      <%= link_to "Login", new_user_session_path %> 
-      <%= link_to "Register", new_user_registration_path %>
-    <% else %>
-       <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-    <% end %>
-    
+     <%= login_helper %>
+   
     <%= yield %>
     
  
