--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -20,11 +20,7 @@
     <%= yield %>
     
  
-    <% if session[:source] %> 
-      Thanks for visiting me from <%= session[:source] %>
-    <% else %>
-      IDK HOW YOU GOT HERE YOU WIZZAARD
-    <% end %>
+    <%= source_helper("application") %>
     
   </body>
 </html>
