--- a/DevcampPortfolio/app/views/layouts/blog.html.erb
+++ b/DevcampPortfolio/app/views/layouts/blog.html.erb
@@ -21,9 +21,7 @@
     
     <%= render "shared/nav", location: 'bottom' %>
  
-    <% if session[:source] %> 
-      Thanks for visiting me from <%= session[:source] %>
-    <% end %>
+    <%= source_helper("blogs") %>
     
   </body>
 </html>
