--- a/DevcampPortfolio/app/views/blogs/show.html.erb
+++ b/DevcampPortfolio/app/views/blogs/show.html.erb
@@ -10,5 +10,5 @@
   <%= @blog.body %>
 </p>
 
-<%= link_to 'Edit', edit_blog_path(@blog) %> |
+<%= link_to 'Edit', edit_blog_path(@blog) %> new_blog_path if logged_in?(:site_admin) |
 <%= link_to 'Back', blogs_path %>
