--- a/DevcampPortfolio/app/views/pages/home.html.erb
+++ b/DevcampPortfolio/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <% if current_user %>
-  <h1>Hi, <%= current_user.first_name %><h1>
+  <h1>Hi, <%= current_user.first_name %></h1>
 <% end %>
 
 <%= link_to 'Portfolios', portfolios_path %>
