--- a/DevcampPortfolio/app/views/portfolios/_portfolio_item.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/_portfolio_item.html.erb
@@ -6,4 +6,4 @@
 
 <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
 
-<%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
+<%= link_to "Edit", edit_portfolio_path(portfolio_item.id) if logged_in?(:site_admin) %>
