--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -13,18 +13,22 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+   <div class="site-wrapper">
+     
+    <div class="site-wrapper-inner">
+      
+      <div class="cover-container">
     
-    <%= render "shared/nav", location: 'top' %>
-    
-     <%= login_helper %>
-   
-    <%= yield %>
-    
- 
-    <%= source_helper("application") %>
-    
+        <%= render "shared/application_nav", location: 'top' %>
+        
+        <%= login_helper %>
+       
+        <%= yield %>
+        
+        <%= source_helper("application") %>
+      </div>
+    </div>
+   </div>
   </body>
 </html>
 
