updated styles for edit

--- a/DevcampPortfolio/app/views/pages/about.html.erb
+++ b/DevcampPortfolio/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
 <h1>about me</h1>
 <h3>im a pretty swaggy dude</h3>
-<img src="https://www.planwallpaper.com/static/images/desktop-year-of-the-tiger-images-wallpaper.jpg"/>
+<img src="https://www.planwallpaper.com/static/images/desktop-year-of-the-tiger-images-wallpaper.jpg" style="width:304px;height:228px;"/>
 <a href="http://www.diep.io">DEEEEP</a>
