--- a/DevcampPortfolio/app/views/pages/contact.html.erb
+++ b/DevcampPortfolio/app/views/pages/contact.html.erb
@@ -1,10 +1,18 @@
 <h1>Contact</h1>
 
-<p><%= number_to_phone "6664206969"%></p>
+<div class="row">
+  
+  <div class="col-md-6">
+  <h4>Phone</h4>
+  <p><%= number_to_phone "6664206969"%></p>
+  <h4>Email</h4>
+  <p><a href="mailto:a.nichols.taylor@gmail.com?subject=PortfolioContact" "email me">Email Me</a></p>
+  </div>
+  
+  <div class="col-md-6">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1734.5910584250003!2d-76.54311734793711!3d64.23033318355279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4e75bb68beb36b11%3A0xfa82f7a7738a1327!2sCape+Dorset%2C+NU+X0A+0C0%2C+Canada!5e0!3m2!1sen!2sus!4v1500392010524" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+  
+</div>
 
-<p><% number_to_currency "420"%></p>
-
-<p><% number_to_percentage "80.4"%></p>
-
-<p><% number_with_delimiter "64548732165468746513"%></p>
 
