--- a/DevcampPortfolio/app/assets/stylesheets/application.scss
+++ b/DevcampPortfolio/app/assets/stylesheets/application.scss
@@ -157,6 +157,19 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 42rem;
+    width: 55rem;
   }
+}
+
+/*
+* Custom Styles
+*/
+
+.card-block {
+  color: grey;
+  text-align: left;
+}
+
+.back-link a {
+  color: black;
 }
