--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -8,24 +8,30 @@
     <%= csrf_meta_tags %>
     
     <meta name="keywords" content="<%= @seo_keywords %>" />
+    
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
    <div class="site-wrapper">
-     
     <div class="site-wrapper-inner">
-      
       <div class="cover-container">
     
         <%= render "shared/application_nav", location: 'top' %>
-        
-        <%= login_helper %>
        
         <%= yield %>
         
+        
+        
+        <div class="mastfoot">
+          <div class="inner">
+            <p>Copyright 2017 Nichols</p>
+          </div>
+        </div>
+        
         <%= source_helper("application") %>
+        
       </div>
     </div>
    </div>
