--- a/DevcampPortfolio/app/views/shared/_application_nav.erb
+++ b/DevcampPortfolio/app/views/shared/_application_nav.erb
@@ -8,6 +8,7 @@
         <%= link_to "Contact", contact_path, class: 'nav-link' %>
         <%= link_to "Blogs", blogs_path, class: 'nav-link' %>
         <%= link_to "Portfolios", portfolios_path, class: 'nav-link' %>
+        <%= login_helper 'nav-link' %>
       </nav>
     </div>
 </div>
