--- a/DevcampPortfolio/app/assets/stylesheets/application.scss
+++ b/DevcampPortfolio/app/assets/stylesheets/application.scss
@@ -173,3 +173,15 @@ body {
 .back-link a {
   color: black;
 }
+
+.register-text {
+  text-align: right;
+}
+
+
+
+.login > .card {
+  width: 22rem;
+  margin: 0 auto;
+  float: none;
+}
