--- a/DevcampPortfolio/app/views/layouts/blog.html.erb
+++ b/DevcampPortfolio/app/views/layouts/blog.html.erb
@@ -17,8 +17,9 @@
     
     <div class="blog-header">
       <div class="container">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
+        <h1 class="blog-title">My Blog</h1>
         <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <%= link_to 'Write a new Blog', new_blog_path if logged_in?(:site_admin) %>
       </div>
     </div>
   <!-- end start of container and row-->
@@ -27,8 +28,6 @@
 
       <div class="row">
   <!-- end of container and row -->
-         <%= login_helper %>
-       
         
         <%= yield %>
         <!-- sidebar -->
@@ -63,7 +62,7 @@
             </ol>
           </div>
         </div><!-- end of sidebar start of footer -->
-        
+      </div>
         <footer class="blog-footer">
           <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
           <p>
@@ -71,10 +70,8 @@
           </p>
         </footer>
     <!-- end of footer -->
-        <%= render "shared/nav", location: 'bottom' %>
      
         <%= source_helper("blogs") %>
-      </div>
     </div>
   </body>
 </html>
