--- a/DevcampPortfolio/app/views/portfolios/index.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/index.html.erb
@@ -1,5 +1,9 @@
-<h1>Porfolio Items</h1>
-
-<%= link_to "Create New Item", new_portfolio_url if logged_in?(:site_admin) %>
+<div class="album text-muted">
+  <div class="container">
+    <div class="row">
 
 <%= render partial: 'portfolio_item', collection: @portfolio_items %>
+
+    </div>
+  </div>
+</div>
