implemented refactor for navigation and activeness.

--- a/DevcampPortfolio/app/views/portfolios/new.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/new.html.erb
@@ -1,3 +1,7 @@
-<h1>NEW SHIZ</h1>
+<div class="container portfolio-form">
+  <h1>NEW SHIZ</h1>
 
 <%= render 'form', portfolio_item: @portfolio_item %>
+</div>
+
+
