--- a/DevcampPortfolio/app/views/layouts/portfolio.html.erb
+++ b/DevcampPortfolio/app/views/layouts/portfolio.html.erb
@@ -18,7 +18,7 @@
   
   <!-- end of nav start of masthead -->
   
-  <%= render 'shared/portfolio_masthead' %>
+  <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
     
     <%= yield %>
     
