--- a/DevcampPortfolio/app/views/portfolios/edit.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>YOU MESSed UP YOUR SHIZ</h1>
+<div class="container portfolio-form">
+  <h1>YOU MESSed UP YOUR SHIZ</h1>
 
-<%= render 'form', portfolio_item: @portfolio_item %>
+  <%= render 'form', portfolio_item: @portfolio_item %>
+</div>
