--- a/DevcampPortfolio/app/views/portfolios/show.html.erb
+++ b/DevcampPortfolio/app/views/portfolios/show.html.erb
@@ -1,11 +1,25 @@
-<%= image_tag @portfolio_item.main_image %>
-<%= @portfolio_item.title %>
-<em><%= @portfolio_item.subtitle %></em>
-<p><%= @portfolio_item.body%></p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+      <%= image_tag @portfolio_item.main_image %>
+    </div>
+    
+     <div class="col-md-5">
 
-<h2>Technologies Used</h2>
-
-<% @portfolio_item.technologies.each do |t| %>
-<p><%= t.name %></p>
-<% end %>
-
+      <%= @portfolio_item.title %>
+      
+      <em><%= @portfolio_item.subtitle %></em>
+      
+      <p><%= @portfolio_item.body%></p>
+      
+      <hr>
+      
+      <h3>Technologies Used</h3>
+      
+      <% @portfolio_item.technologies.each do |t| %>
+      <p><%= t.name %></p>
+      <% end %>
+      
+    </div>
+  </div>
+</div>
