--- a/DevcampPortfolio/app/views/shared/_portfolio_nav.html.erb
+++ b/DevcampPortfolio/app/views/shared/_portfolio_nav.html.erb
@@ -8,20 +8,17 @@
       <div class="col-sm-4 py-4">
         <h4 class="text-white">Explore</h4>
         <ul class="list-unstyled">
-          <li><%= link_to "Home", root_path, class: 'text-white' %></li>
-          <li><%= link_to "About", about_path, class: 'text-white' %></li>
-          <li><%= link_to "Contact", contact_path, class: 'text-white' %></li>
-          <li><%= link_to "Blogs", blogs_path, class: 'text-white' %></li>
-          <li><%= link_to "Portfolios", portfolios_path, class: 'text-white' %></li>
+          <%= nav_helper 'text-white', 'li' %>
           <li><%= login_helper 'text-white' %></li>
         </ul>
       </div>
     </div>
   </div>
 </div>
+
 <div class="navbar navbar-inverse bg-inverse">
   <div class="container d-flex justify-content-between">
-    <a href="#" class="navbar-brand">Nichols C Taylor</a>
+    <a href="#" class="navbar-brand">Jordan Hudgens</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
