halfway through adidng a positioin attrubte

--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -24,12 +24,8 @@
         
         
         
-        <div class="mastfoot">
-          <div class="inner">
-            <p>Copyright 2017 Nichols</p>
-          </div>
-        </div>
-        
+        <%= render "shared/application_footer" %>
+         
         <%= source_helper("application") %>
         
       </div>
