added video background

--- a/DevcampPortfolio/app/views/pages/about.html.erb
+++ b/DevcampPortfolio/app/views/pages/about.html.erb
@@ -1,4 +1,14 @@
 <h1>about me</h1>
-<h3>im a pretty swaggy dude</h3>
-<img src="https://www.planwallpaper.com/static/images/desktop-year-of-the-tiger-images-wallpaper.jpg" style="width:304px;height:228px;"/>
-<a href="http://www.diep.io">DEEEEP</a>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-4">
+    <img src="https://fsmedia.imgix.net/5b/f7/65/d3/8cdc/404b/aa32/858cf495cf59/how-the-heck-does-morty-get-a-hulk-arm-with-a-mind-of-its-own.gif?auto=format%2Ccompress&w=700&gifq=35" width="300px">
+  </div>
+  
+  <div class="col-md-8">
+    <h3>im a pretty swaggy dude</h3>
+    <p>I like doing lots of things like making music and adventuring i like cello guitar, ukulele, and piano. i like to ski and trampoline and other shiz.</p>
+  </div>
+</div>
