--- a/DevcampPortfolio/app/views/layouts/application.html.erb
+++ b/DevcampPortfolio/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
        
         <%= yield %>
         
-        
+        <%= alerts %>
         
         <%= render "shared/application_footer" %>
          
