--- a/DevcampPortfolio/app/views/layouts/blog.html.erb
+++ b/DevcampPortfolio/app/views/layouts/blog.html.erb
@@ -24,6 +24,8 @@
         <%= yield %>
         <%= render 'shared/blog_sidebar' %>
         
+        <%= alerts %>
+        
       </div>
         <%= render 'shared/blog_footer' %>
         <%= source_helper("blogs") %>
