--- a/DevcampPortfolio/app/views/layouts/portfolio.html.erb
+++ b/DevcampPortfolio/app/views/layouts/portfolio.html.erb
@@ -22,6 +22,8 @@
     
     <%= yield %>
     
+    <%= alerts %>
+    
     <!-- footer -->
     <%= render 'shared/portfolio_footer' %>
    <%= source_helper("application") %>
